--- a/RentCar.WebUI/Views/Car/CarDescAsync.cshtml
+++ b/RentCar.WebUI/Views/Car/CarDescAsync.cshtml
@@ -8,7 +8,7 @@
 <h2>CarDesc</h2>
 
 <div>
-    <h4>Car</h4>
+    <h4>@Html.DisplayFor(model => model.Brand.NameBrand) @Html.DisplayFor(model => model.Brand.NameModel)</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
