--- a/RentCar.WebUI/Views/Car/List.cshtml
+++ b/RentCar.WebUI/Views/Car/List.cshtml
@@ -11,12 +11,11 @@
             Категория:
         </label>
         @Html.DropDownList("category", Model.Categorys as SelectList, htmlAttributes: new { @class = "form-control" })
-        
+
         <label class="control-label">
             КПП:
         </label>
         @Html.DropDownList("transmission", Model.Transmissions as SelectList, htmlAttributes: new { @class = "form-control" })
-
 
         <label class="control-label">
             Топливо:
@@ -31,7 +30,7 @@
     </div>
 </form>
 
-<table>
+@*<table>
     <tr>
         <th>
             Марка
@@ -63,47 +62,77 @@
         <th>
             Стоимость аренды авто за день
         </th>
-    </tr>
+    </tr>*@
+@foreach (var item in Model.Cars)
+{
+<div class="product-card-inner">
+    <div data-product-rating="" class="product-card-rating">@Html.DisplayFor(modelitem => item.Brand.NameBrand) @Html.DisplayFor(modelitem => item.Brand.NameModel)<div class="product-rating">  </div></div>
 
-    @foreach (var item in Model.Cars)
+    <div class="product-card-property">
+        <span class="product-card-line">
+            <span class="product-card-property-title lg-grid-6">Объем двигателя:</span>
+            <span class="product-card-property-value lg-grid-6">@Html.DisplayFor(modelitem => item.volumeEndine)</span>
+        </span>
+
+        <span class="product-card-line">
+            <span class="product-card-property-title lg-grid-6">Топливо:</span>
+            <span class="product-card-property-value lg-grid-6">@Html.DisplayFor(modelitem => item.Fuel.NameFuel)</span>
+        </span>
+
+        <span class="product-card-line">
+            <span class="product-card-property-title lg-grid-6">КПП:</span>
+            <span class="product-card-property-value lg-grid-6">@Html.DisplayFor(modelitem => item.Transmission.NameTransmission)</span>
+        </span>
+
+    </div>
+    <div class="product-card-price product-prices in-card">
+        <div class="price in-card">
+            @Html.DisplayFor(modelitem => item.costOfDay)
+        </div>
+    </div>
+    @Html.ActionLink("К описанию", "CarDescAsync", new { carid = item.NumberCar })
+</div>
+}
+
+@*@foreach (var item in Model.Cars)
     {
-<tr>
-    <td>
-        @Html.DisplayFor(modelitem => item.Brand.NameBrand)
-    </td>
-    <td>
-        @Html.DisplayFor(modelitem => item.Brand.NameModel)
-    </td>
-    <td>
-        @Html.DisplayFor(modelitem => item.Category.NameCategory)
-    </td>
-    <td>
-        @Html.DisplayFor(modelitem => item.Transmission.NameTransmission)
-    </td>
-    <td>
-        @Html.DisplayFor(modelitem => item.Fuel.NameFuel)
-    </td>
-    <td>
-        @Html.DisplayFor(modelitem => item.TypeBody.NameBody)
-    </td>
-    <td>
-        @Html.DisplayFor(modelitem => item.volumeEndine)
-    </td>
-    <td>
-        @Html.DisplayFor(modelitem => item.year)
-    </td>
-    <td>
-        @Html.DisplayFor(modelitem => item.price)
-    </td>
-    <td>
-        @Html.DisplayFor(modelitem => item.costOfDay)
-    </td>
-    <td>
-        @Html.ActionLink("Car", "CarDescAsync", new { carid = item.NumberCar })
-    </td>
-</tr>
-    }
-</table>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelitem => item.Brand.NameBrand)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.Brand.NameModel)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.Category.NameCategory)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.Transmission.NameTransmission)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.Fuel.NameFuel)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.TypeBody.NameBody)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.volumeEndine)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.year)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelitem => item.costOfDay)
+            </td>
+            <td>
+                @Html.ActionLink("Car", "CarDescAsync", new { carid = item.NumberCar })
+            </td>
+        </tr>
+    }*@
+@*</table>*@
 @*<div class="btn-group pull-right">
         @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))
     </div>*@
